--- a/chrome/navbar_tabs_oneliner_tabs_on_left.css
+++ b/chrome/navbar_tabs_oneliner_tabs_on_left.css
@@ -69,3 +69,5 @@ Window controls will be all wrong without it
 
 /* Hide dropdown placeholder */
 #urlbar-container:not(:hover) .urlbar-history-dropmarker{ margin-inline-start: -28px; }
+/* Fix customization view */
+#customization-panelWrapper > .panel-arrowbox > .panel-arrow{ margin-inline-end: initial !important; }
