--- a/chrome/navbar_tabs_responsive_oneliner.css
+++ b/chrome/navbar_tabs_responsive_oneliner.css
@@ -46,3 +46,5 @@ Window controls will be all wrong without it
   /* Hide dropdown placeholder */
   #urlbar-container:not(:hover) .urlbar-history-dropmarker{ margin-inline-start: -28px; }
 }
+/* Fix customization view */
+#customization-panelWrapper > .panel-arrowbox > .panel-arrow{ margin-inline-end: initial !important; }
